--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Calculadora IRPF - MEI",
 	"main": "app.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "webpack"
 	},
 	"repository": {
 		"type": "git",
@@ -18,7 +19,10 @@
 	},
 	"homepage": "https://github.com/frehelfer/cs50-final-project-Calculadora-IRPF-MEI#readme",
 	"dependencies": {
-		"firebase": "^9.9.3",
-		"nodemon": "^2.0.19"
+		"firebase": "^9.9.3"
+	},
+	"devDependencies": {
+		"webpack": "^5.74.0",
+		"webpack-cli": "^4.10.0"
 	}
 }
